# clearParquet

./: CMakeLists.txt  LICENSE  README.md
core/: .clang-format  .clang-tidy  CMakeLists.txt  ParquetArray.hpp  ParquetColumnChunk.hpp  ParquetColumnWriter.hpp  ParquetDataStore.hpp  ParquetFileInputStream.hpp  ParquetFileOutputStream.hpp  ParquetFileReader.hpp  ParquetFileWriter.hpp  ParquetPageHeader.hpp  ParquetRecordBatch.hpp  ParquetSchema.hpp  ParquetStreamWriter.hpp  ParquetThriftDecoder.hpp  ParquetThriftEncoder.hpp  ParquetThriftSerializer.hpp  ParquetTypes.hpp  ParquetWriterProperties.hpp
test/: .clang-format  CMakeLists.txt  arrowWriter.cpp  reader.cpp  unittest.cpp  writer.cpp
